<resources>
    <string name="app_name">Notice_App</string>

    <string name="dark">Darkmode</string>
    <string name="two">2</string>
    <string name="note">Your Note \'s</string>
    <string name="insert">Einfügen</string>
    <string name="folder">Folder</string>
    <string name="titel">Titel</string>
    <string name="inhalt">Inhalt</string>
    <string name="speichern">Speichern</string>
    <string name="button">Button</string>
</resources>