<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinehead0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />


    <TextView
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/beige"
        android:gravity="center_vertical"
        android:text="@string/note"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guidelinehead"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelinehead0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinehead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinesearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.11" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinesearch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <SearchView
        android:id="@+id/search"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guidelinesearch1"
        app:layout_constraintEnd_toStartOf="@+id/guidelinesearch2"
        app:layout_constraintStart_toStartOf="@+id/guidelinesearch3"
        app:layout_constraintTop_toTopOf="@+id/guidelinesearch" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinesearch2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinesearch3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinespinner0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.01" />

    <Spinner
        android:id="@+id/filter"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/filter"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toTopOf="@+id/guidelinesearch1"
        app:layout_constraintEnd_toStartOf="@+id/guidelinegrid2"
        app:layout_constraintStart_toStartOf="@+id/guidelinespinner0"
        app:layout_constraintTop_toTopOf="@+id/guidelinesearch"
        tools:ignore="TouchTargetSizeCheck" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinespinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.48" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinegrid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinegrid1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.76" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvGrid"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="8dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/guidelinegrid1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelinegrid"
        app:spanCount="2"
        tools:listitem="@layout/item_folder" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinegrid2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.08" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinegrid3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <Spinner
        android:id="@+id/number"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guidelinesite1"
        app:layout_constraintEnd_toStartOf="@+id/guidelinesite3"
        app:layout_constraintStart_toStartOf="@+id/guidelinesite2"
        app:layout_constraintTop_toTopOf="@+id/guidelinesite" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinesite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.77" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinesite1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.80" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinesite2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="1.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinesite3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinesiteswitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.65" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinesiteswitch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.68" />

    <ImageView
        android:id="@+id/arrowleft"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/outline_arrow_back_ios_24"
        app:layout_constraintBottom_toTopOf="@+id/guidelinesite1"
        app:layout_constraintEnd_toStartOf="@+id/guidelinesiteswitch1"
        app:layout_constraintStart_toStartOf="@+id/guidelinesiteswitch"
        app:layout_constraintTop_toTopOf="@+id/guidelinesite" />



    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinesitenumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.69" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinesitenumber1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.74" />


    <ImageView
        android:id="@+id/arrworight"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toTopOf="@+id/guidelinesite1"
        app:layout_constraintEnd_toStartOf="@+id/guidelinesiteswitch3"
        app:layout_constraintStart_toStartOf="@+id/guidelinesiteswitch2"
        app:layout_constraintTop_toTopOf="@+id/guidelinesite"
        app:srcCompat="@drawable/outline_arrow_forward_ios_24" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinesiteswitch2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinesiteswitch3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.78" />

    <TextView
        android:id="@+id/siteNumber"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/two"
        app:layout_constraintBottom_toTopOf="@+id/guidelinesite1"
        app:layout_constraintEnd_toStartOf="@+id/guidelinesitenumber1"
        app:layout_constraintStart_toStartOf="@+id/guidelinesitenumber"
        app:layout_constraintTop_toTopOf="@+id/guidelinesite" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/insertbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:contentDescription="@string/insert"
        android:backgroundTint="@color/grey"
        app:srcCompat="@drawable/plus"
        app:layout_constraintBottom_toTopOf="@+id/guidelinebtn1"
        app:layout_constraintEnd_toStartOf="@+id/guidelinesearch2"
        app:layout_constraintStart_toStartOf="@+id/guidelinesiteswitch3"
        app:layout_constraintTop_toTopOf="@+id/guidelineswitch" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinebtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.89" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinebtn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.97" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinesitebtn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />


    <Switch
        android:id="@+id/switch1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/dark"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineswitch1"
        app:layout_constraintEnd_toStartOf="@+id/guidelinesearch3"
        app:layout_constraintStart_toStartOf="@+id/guidelinesite3"
        app:layout_constraintTop_toTopOf="@+id/guidelineswitch"
        tools:ignore="UseSwitchCompatOrMaterialXml,TouchTargetSizeCheck" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineswitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineswitch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinefiles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />


</androidx.constraintlayout.widget.ConstraintLayout>